--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-starter-ES6",
+  "name": "react-starter-es6",
   "browserify": {
     "transform": [
       "babelify",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "sinon": "1.15.4",
     "standard": "4.5.4",
+    "standard-format": "1.6.0",
     "tape": "2.3.3",
     "uglify": "~0.1.5"
   }
