--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
   "name": "react-starter-es6",
+  "version": "0.0.1",
+  "description": "Browserify es6 react starter",
   "browserify": {
     "transform": [
       "babelify",
       "reactify"
     ]
+  },
+  "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/h02e56/react-starter-es6"
   },
   "scripts": {
     "start": "ecstatic -p 8000 public",
@@ -12,10 +19,14 @@
     "dev": "npm run watch & npm run server-dev",
     "watch": "watchify main.js -o public/bundle.js -dv",
     "server-dev": "node browser-sync.js",
-    "test": "standard"
+    "test": "standard & babel-node test/test.js | faucet"
   },
   "standard": {
     "parser": "babel-eslint"
+  },
+  "author": {
+    "name": "h02e56",
+    "email": "josep@h02e56.com"
   },
   "dependencies": {
     "babel": "^5.6.23",
@@ -26,12 +37,16 @@
     "ecstatic": "~0.8.0",
     "react": "~0.13.3",
     "reactify": "^1.1.1",
+    "tap": "1.0.5",
     "watchify": "^3.2.3"
   },
   "devDependencies": {
+    "faucet": "0.0.1",
     "standard": "4.5.4",
     "standard-format": "1.6.0",
     "tape": "2.3.3",
     "uglify": "~0.1.5"
-  }
+  },
+  "private": "false",
+  "license": "MIT"
 }
